fix response auth
