# src/routes/auth.route.ts
@@ -8,8 +8,8 @@ router.post('/register', authController.registerController)
 router.post('/login', authController.loginController)
 router.post('/active', authController.active)
 router.post('/refresh-token', authMiddleware, authController.refreshTokenController)
-router.post('/sendOtpForgot', authMiddleware, authController.sendOtpForGot)
-router.post('/verifyOtpForGot', authMiddleware, authController.verifyOtpForGot)
+router.post('/send-otp-forgot', authMiddleware, authController.sendOtpForGot)
+router.post('/verify-otp-forGot', authMiddleware, authController.verifyOtpForGot)
 router.post('/change-password', authMiddleware, authController.changePasswordController)
 router.post('/reset-password', authMiddleware, authController.changePasswordController)
 router.post('/logout', authMiddleware, authController.logoutController)
